--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,27 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #FBF8EF;
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --color-orangevid: #E07B39;
+  --color-brunclair: #8B5C2D;
+  --color-base: #FFFBE6;
+  --color-vertclair: #B4EBE6;
+  --color-bluedark: #80CBC4;
+  --font-oswald: 'oswald', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "oswald";
+  src: url("/assets/font/oswald/Oswald-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-display: swap;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
